slight dangerous changes

--- a/index.html
+++ b/index.html
@@ -19,38 +19,13 @@
 <body>
     <!-- Header -->
     <header>
-        <div class="hamburger">
-            <div class="hamburger-container">
-                <div class="hamburger-menu">
-                    <div class="line line-1"></div>
-                    <div class="line line-2"></div>
-                    <div class="line line-3"></div>
-                </div>
-                <div class="hamburger-list">
-                    <li class="hamburger-item">
-                        <a href="#" class="hamburger-link">Home</a>
-                    </li>
-                    <li class="hamburger-item">
-                        <a href="#" class="hamburger-link">About Us</a>
-                    </li>
-                    <li class="hamburger-item">
-                        <a href="#" class="hamburger-link">News</a>
-                    </li>
-                    <li class="hamburger-item">
-                        <a href="#" class="hamburger-link">Gallery</a>
-                    </li>
-                    <li class="hamburger-item">
-                        <a href="#" class="hamburger-link">Events</a>
-                    </li>
-                    <li class="hamburger-item">
-                        <a href="#" class="hamburger-link">Pricing</a>
-                    </li>
-                    <li class="hamburger-item">
-                        <a href="#" class="hamburger-link">Contact</a>
-                    </li>
-                </div>
-            </div>
-        </div>
+
+
+
+
+
+
+
         <nav class="navbar top">
             <div class="welcome">
                 <h6>Welcome to our Styling!</h6>
@@ -63,6 +38,47 @@
             </div>
 
         </nav>
+
+        <nav class="nav-ops pt-3 pb-3">
+            <div class="nav-ops-ops">
+                <li class="col-1 logo"><a href=""><img src="img/logo.svg" alt=""></a></li>
+                <div class="nav-ops-menu">
+                    <div class="line line-1"></div>
+                    <div class="line line-2"></div>
+                    <div class="line line-3"></div>
+                </div>
+            </div>
+
+            <div class="hamburger">
+                <div class="hamburger-container">
+
+                    <div class="hamburger-list">
+                        <li class="hamburger-item">
+                            <a href="#" class="hamburger-link">Home</a>
+                        </li>
+                        <li class="hamburger-item">
+                            <a href="#" class="hamburger-link">About Us</a>
+                        </li>
+                        <li class="hamburger-item">
+                            <a href="#" class="hamburger-link">News</a>
+                        </li>
+                        <li class="hamburger-item">
+                            <a href="#" class="hamburger-link">Gallery</a>
+                        </li>
+                        <li class="hamburger-item">
+                            <a href="#" class="hamburger-link">Events</a>
+                        </li>
+                        <li class="hamburger-item">
+                            <a href="#" class="hamburger-link">Pricing</a>
+                        </li>
+                        <li class="hamburger-item">
+                            <a href="#" class="hamburger-link">Contact</a>
+                        </li>
+                    </div>
+                </div>
+            </div>
+        </nav>
+
         <nav class="navbar _2-nav">
             <ul class="nav">
                 <li class="col-1 logo"><a href=""><img src="img/logo.svg" alt=""></a></li>
@@ -97,8 +113,8 @@
                     <a class="nav-link" href="#"><i class="fa fa-briefcase"></i></a>
                 </li>
             </ul>
-           
-            
+
+
 
         </nav>
     </header>
