chore: worked on some changes on contact and product page

--- a/contact.html
+++ b/contact.html
@@ -49,10 +49,10 @@
                                 </div>
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <textarea name="" id="" class="form-control" rows="10" placeholder="Your Message"></textarea>
+                                        <textarea name="" id="" class="form-control" rows="4" placeholder="Your Message"></textarea>
                                     </div>
                                     <div class="pull-right">
-                                        <button class="btn btn-brown">Submit</button>
+                                        <button class="btn btn-brown">Send your Message</button>
                                     </div>
                                 </div>
                             </div>
