feat: created register login pages

--- a/categories.html
+++ b/categories.html
@@ -10,7 +10,15 @@
 </head>
 <body>
 
-    
+     <!-- about -->
+     <section class="header d-flex justify-content-center align-items-center">
+        <div class="container">
+            <h2 class="font-weight-bold">CATEGORIES</h2>
+            <p class="home-text">HOME / CATEGORIES</p>
+        </div>
+    </section>
+    <!-- end of about -->
+
     
         <div class="section-header text-center">
             <div class="container-fluid">
