--- a/single-product.html
+++ b/single-product.html
@@ -9,17 +9,17 @@
     <link rel="stylesheet" href="css/font-awesome.css">
 </head>
 <body>
-    <div class="header">
-        <ul id="main-menu" class="">
-            <li><a href="">Home</a></li>
-            <li><a href="">Home</a></li>
-            <li><a href="">Home</a></li>
-            <li><a href="">Home</a></li>
-            <li><a href="">Home</a></li>
-        </ul>
-    </div>
+     
+     <!-- about -->
+     <section class="header d-flex justify-content-center align-items-center">
+        <div class="container">
+            <h2 class="font-weight-bold">SINGLE PRODUCT</h2>
+            <p class="home-text">HOME / SINGLE PRODUCT</p>
+        </div>
+    </section>
+    <!-- end of about -->
 
-    <button id="myButton"> click</button>
+
     <div class="container">
         <div class="product-display my-5">
             <div class="row">
