--- a/contact.html
+++ b/contact.html
@@ -12,17 +12,18 @@
 </head>
 
 <body>
-    <div class="container">
-        <section class="header">
-            <div class="container">
-                <div class="header-title">
-                    <h1>
-                        contact
-                    </h1>
-                </div>
-            </div>
 
-        </section>
+     <!-- about -->
+     <section class="header d-flex justify-content-center align-items-center">
+        <div class="container">
+            <h2 class="font-weight-bold">CONTACT</h2>
+            <p class="home-text">HOME / CONTACT</p>
+        </div>
+    </section>
+    <!-- end of about -->
+
+
+   
 
         <div class="contact-section">
             <div class="container-fluid">
