--- a/products-services.html
+++ b/products-services.html
@@ -10,16 +10,14 @@
 </head>
 <body>
 
-        <section class="header">
-            <div class="container">
-                <div class="header-title">
-                    <h1>
-                        Products and Services
-                    </h1>
-                </div>
-            </div>
-            
-        </section>
+ <!-- about -->
+ <section class="header d-flex justify-content-center align-items-center">
+    <div class="container">
+        <h2 class="font-weight-bold">PRODUCT & SERVICES</h2>
+        <p class="home-text">HOME / PRODUCT & SERVICES</p>
+    </div>
+</section>
+<!-- end of about -->
 
         <section class="products-section py-4">
             <div class="container">
