chore: made some changes

--- a/products-services.html
+++ b/products-services.html
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <div class="centered-btn text-center py-3">
-                    <a href="#" class="btn btn-brown">View Our Categories</a>
+                    <a href="categories.html" class="btn btn-brown">View Our Categories</a>
                 </div>
             </div>
         </section>
