--- a/indexx.html
+++ b/indexx.html
@@ -93,20 +93,19 @@
                         <img class="img-fluid" src="img/categories/hairProduct5.png" alt="">
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <h4>ABOUT US</h4>
+                <div class="col-md-6 mt-5">
+                    <h4>We Are</h4>
                     <p>Passion, knowledge and the gift of beauty salon & Barber Passion, knowledge and the gift
                     of
                     beauty salon & Barber continues to give the best services in the world. Lorem Ips is
                     simply
-                    dummy text of the printing and typesetting industry. <br><br>
+                    dummy text of the printing and typesetting industry.</p>
                     
-                    Lorem Ips is simply dummy text of the printing and typesetting industry.Lorem Ips is
+                    <p>Lorem Ips is simply dummy text of the printing and typesetting industry.Lorem Ips is
                     simply
                     dummy text of the printing and typesetting industry.ontinues to give the best services
-                    in the world. Lorem Ips is simply dummy text of the printing and typesetting industry.
+                    in the world. Lorem Ips is simply dummy text of the printing and typesetting industry.</p>
                     
-                    </p>
                     <button class="btn btn-danger">VIEW MORE</button>
                 </div>
             </div>
@@ -298,7 +297,7 @@
         </div>
     </div>
     <div class="customer-reviews py-5">
-        <div class="container ">
+        <div class="container">
             <div class="row">
                 <div class="col-12">
                     <div id="carouselTestimony" class="carousel slide">
@@ -432,12 +431,13 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi voluptatem eos nostrum impedit
                             ea dolore, facilis quod aperiam quidem?</p>
                     </div>
-                    <div class="footer-icons">
-                        <i class="fa fa-facebook"></i>
-                        <i class="fa fa-twitter"></i>
-                        <i class="fa fa-linkedin"></i>
-                        <i class="fa fa-youtube"></i>
-                    </div>
+                    <ul class=" d-flex  justify-content-between footer-icons">
+                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    </ul>
                 </div>
                 <div class="col-md-2 footer-links">
                     <h3>Useful Links</h3>
@@ -478,10 +478,12 @@
                 <div class="col-md-3 footer-contact-us">
                     <h3>Contact Us</h3>
                     <ul class="contact-list">
-                        <li><i class="fa fa-map-marker"></i> Styling demo Store Demo Store India-3654123</li>
-                        <li><i class="fa fa-phone"></i> Call Us: 123-456-7898</li>
-                        <li><i class="fa fa-envelope-o"></i> Email Us: Support@styling.com</li>
-                        <li><i class="fa fa-fax"></i> Fax: 123456</li>
+                        <li><i class="fa fa-map-marker"></i> #38 Afaha Uqua Eket, Akwa Ibom</li>
+                        <li><i class="fa fa-phone"></i> 0806700000</li>
+                        <li><i class="fa fa-envelope-o"></i> Email Us: <a href="">Support@styling.com</a></li>
+                        <li><i class="fa fa-twitter"></i> Fax: 123456</li>
+                        <li><i class="fa fa-facebook"></i> <a href="#">@pereg</a></li>
+                        <li><i class="fa fa-instagram"></i> <a href="#">@pereg</a></li>
                     </ul>
                 </div>
             </div>
