chore: added header and footer template

--- a/about.html
+++ b/about.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <!-- header -->
+    <div id="header" class="wow fadeIn"></div>
     <!-- about -->
     <section class="header d-flex justify-content-center align-items-center">
         <div class="container">
@@ -39,7 +41,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-5 my-4">
                     <div class="row">
                         <div class="col-md-6 mx-0 px-0 text-center"><img src="img/organic-product.jpg"
                                 class="img-fluid" alt=""></div>
@@ -276,8 +278,11 @@
     </section>
     <!-- end of team -->
 
+    <div id="footer" class="wow fadeIn"></div>
+
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
