--- a/login.html
+++ b/login.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+
+    <div id="header" class="wow fadeIn"></div>
 <!-- txt -->
   <section class="background text-center text-white d-flex justify-content-center align-items-center">
       <div class="container">
@@ -72,9 +74,11 @@
         </div>
     </div>
 </section>
+<div id="footer" class="wow fadeIn"></div>
 
 
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
