--- a/password.html
+++ b/password.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <div id="header" class="wow fadeIn"></div>
     
 <!-- txt -->
 <section class="background text-center text-white header d-flex justify-content-center align-items-center">
@@ -41,10 +42,12 @@
     </div>
 </section>
 
+<div id="footer" class="wow fadeIn"></div>
 
 
-
-    <script src="js/bootstrap.min.js"></script>
+    
     <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
