--- a/products-services.html
+++ b/products-services.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 
+    <div id="header" class="wow fadeIn"></div>
+
  <!-- about -->
  <section class="header d-flex justify-content-center align-items-center">
     <div class="container">
@@ -190,9 +192,10 @@
         </section>
     </div>
 
-
+<div id="footer" class="wow fadeIn"></div>
     
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
