--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,8 @@
 
 <body>
 
+    <div id="header" class="wow fadeIn"></div>
+
      <!-- about -->
      <section class="header d-flex justify-content-center align-items-center">
         <div class="container">
@@ -25,8 +27,8 @@
 
    
 
-        <div class="contact-section">
-            <div class="container-fluid">
+        <div class="contact-section my-5">
+            <div class="container">
                 
                 <div class="row">
                     <div class="col-md-8">
@@ -86,10 +88,11 @@
         </div>
     </div>
 
-
+    <div id="footer" class="wow fadeIn"></div>
 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
