chore: fixed template heade for uniformity across the pages

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <title>about</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/abouts.css">
-    <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/font-awesome.css">
 </head>
 
 <body>
@@ -17,7 +17,12 @@
     <section class="header d-flex justify-content-center align-items-center">
         <div class="container">
             <h2 class="font-weight-bold">ABOUT</h2>
-            <p class="home-text">HOME / ABOUT</p>
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="#">Home</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">About</li>
+                </ol>
+            </nav>
         </div>
     </section>
     <!-- end of about -->
@@ -191,7 +196,7 @@
                         <div class="carousel-item">
                             <div class="row">
                                 <div class="col-md-2">
-                                    <img class="img-fluid image-sized" src="img/woman-1.jpg" alt="">
+                                    <img class="img-fluid image-sized" src="img/wowan-1.jpg" alt="">
                                 </div>
                                 <div class="col-md-10">
                                     <div class="testimony-text align-items-center justify-content-center mt-5">
@@ -241,7 +246,7 @@
         <div class="container">
             <h4 class="pb-3 pt-5 team"><b>OUR TEAM</b></h4> 
             <h6>WE HAVE PROFESSIONAL AGENTS</h6>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-md-3">
                     <div class="card">
                         <div class="image-holder">
@@ -273,7 +278,7 @@
                     
                 </div>
                  
-            </div>
+            </div> -->
         </div>
     </section>
     <!-- end of team -->
