--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,12 @@
      <section class="header d-flex justify-content-center align-items-center">
         <div class="container">
             <h2 class="font-weight-bold">CONTACT</h2>
-            <p class="home-text">HOME / CONTACT</p>
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="#">Home</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Contact</li>
+                </ol>
+            </nav>
         </div>
     </section>
     <!-- end of about -->
