--- a/password.html
+++ b/password.html
@@ -14,7 +14,12 @@
 <!-- txt -->
 <section class="background text-center text-white header d-flex justify-content-center align-items-center">
     <div class="container">
-        <p class="text">HOME / PASSWORD</p>
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Reset Password</li>
+            </ol>
+        </nav>
        </div>
 </section>
 <!-- end of txt -->
