--- a/categories.html
+++ b/categories.html
@@ -16,7 +16,12 @@
      <section class="header d-flex justify-content-center align-items-center">
         <div class="container">
             <h2 class="font-weight-bold">CATEGORIES</h2>
-            <p class="home-text">HOME / CATEGORIES</p>
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="#">Home</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Categories</li>
+                </ol>
+            </nav>
         </div>
     </section>
     <!-- end of about -->
