--- a/products-services.html
+++ b/products-services.html
@@ -16,7 +16,12 @@
  <section class="header d-flex justify-content-center align-items-center">
     <div class="container">
         <h2 class="font-weight-bold">PRODUCT & SERVICES</h2>
-        <p class="home-text">HOME / PRODUCT & SERVICES</p>
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Produts & Services</li>
+            </ol>
+        </nav>
     </div>
 </section>
 <!-- end of about -->
