--- a/register.html
+++ b/register.html
@@ -14,7 +14,12 @@
   <section class="background text-center text-white d-flex justify-content-center align-items-center">
     <div class="container">
         <h2 class="font-weight-bold">REGISTER</h2>
-        <p class="text">HOME / REGISTER</p>
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Sign Up</li>
+            </ol>
+        </nav>
        </div>
 </section>
 <!-- end of txt -->
