ch: adjusted about page and login pages

--- a/login.html
+++ b/login.html
@@ -6,13 +6,13 @@
     <title>login</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/login.css">
-    <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
+   
 </head>
 <body>
 
     <div id="header" class="wow fadeIn"></div>
 <!-- txt -->
-  <section class="background text-center text-white d-flex justify-content-center align-items-center">
+  <section class="header background text-center text-white d-flex justify-content-center align-items-center">
       <div class="container">
           <h2 class="font-weight-bold">LOGIN</h2>
         <nav aria-label="breadcrumb">
@@ -81,9 +81,8 @@
 </section>
 <div id="footer" class="wow fadeIn"></div>
 
-
-    <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
