--- a/register.html
+++ b/register.html
@@ -6,12 +6,12 @@
     <title>register</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/register.css">
-    <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/font-awesome.css">
 </head>
 <body>
     <div id="header" class="wow fadeIn"></div>
     <!-- txt -->
-  <section class="background text-center text-white d-flex justify-content-center align-items-center">
+  <section class="header background text-center text-white d-flex justify-content-center align-items-center">
     <div class="container">
         <h2 class="font-weight-bold">REGISTER</h2>
         <nav aria-label="breadcrumb">
@@ -117,7 +117,7 @@
 
 
     <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
