ch: adjusted footer font

--- a/login.html
+++ b/login.html
@@ -79,7 +79,7 @@
         </div>
     </div>
 </section>
-<div id="footer" class="wow fadeIn"></div>
+<div id="footer" class=""></div>
 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
