--- a/about.html
+++ b/about.html
@@ -250,7 +250,7 @@
             <div class="col-md-3 col-sm-12 col-6">
                 <div class="member">
                     <div class="img-box">
-                        <img src="img/team/team-1.jpg" class="img-responsive">
+                        <img src="img/team/team-1.jpg" class="img-fluid">
                     </div>
                     <div class="member-details">
                         <div class="content">
@@ -270,7 +270,7 @@
             <div class="col-md-3 col-sm-12 col-6">
                 <div class="member">
                     <div class="img-box">
-                        <img src="img/team/team-2.jpg" class="img-responsive">
+                        <img src="img/team/team-2.jpg" class="img-fluid">
                     </div>
                     <div class="member-details">
                         <div class="content">
@@ -290,7 +290,7 @@
             <div class="col-md-3 col-sm-6 col-6">
                 <div class="member">
                     <div class="img-box">
-                        <img src="img/team/team-3.jpg" class="img-responsive">
+                        <img src="img/team/team-3.jpg" class="img-fluid">
                     </div>
                     <div class="member-details">
                         <div class="content">
@@ -311,7 +311,7 @@
             <div class="col-md-3 col-sm-6 col-6">
                 <div class="member">
                     <div class="img-box">
-                        <img src="img/team/team-4.jpg" class="img-responsive">
+                        <img src="img/team/team-4.jpg" class="img-fluid">
                     </div>
                     <div class="member-details">
                         <div class="content">
