--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <img class="img-fluid" src="img/categories/hairProduct5.png" alt="">
                     </div>
                 </div>
-                <div class="col-md-6 mt-5">
+                <div class="col-md-6 my-5">
                     <h4>- Who we Are</h4>
                     <p class="">We are Pereg Hair Care we have been produing and selling varieties of organic hair product within Eket and all over
                     Akwa-Ibom.</p>
