--- a/products-services.html
+++ b/products-services.html
@@ -30,7 +30,7 @@
             <div class="container">
                 <div class="section-header text-center">
                     <h4>Our Products</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium dolore beatae consectetur. Dolore, debitis? Fugit sed nihil exercitationem earum eligendi!</p>
+                    <p>We have variety of products which are available and affordable for you. Every lady should give it a try</p>
                 </div>
                 <div class="row">
                     <div class="col-md-6">
@@ -44,8 +44,8 @@
                                 <div class="col-md-8 ml-0 py-2">
                                     <div class="product-detail">
                                         <h5 class="product-name">Hair Dyeing</h5>
-                                        <p class="text-justify">This product gives your hair that tone that makes you stand out. It comes in many shades, black, blue, name it. y </p>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, perspiciatis.</p>
+                                        <p class="text-justify">This product gives your hair that tone that makes you stand out. It comes in many shades, black, blue, name it. </p>
+                                        <p>Colors are really important, they give a glow to the hair.</p>
                                     </div>
                                 </div>
                             </div>
